# ICRoots

./: .env  .npmrc  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  postcss.config.js
.github/workflows/: e2e.yml
.husky/: pre-commit
ICRoots/: README.md  tailwind.config.js  vite.config.ts
canisters/loans/: README.md
canisters/loans/src/: main.mo  types.mo
canisters/loans/tests/: loan_flow.mo
legacy-frontend/project/src/: App.tsx
legacy-frontend/project/src/components/: AuthPage.tsx  BTCWallet.tsx  BorrowerDashboard.tsx  LandingPage.tsx  LoanApplication.tsx  LoanHistory.tsx  TrustNFTDisplay.tsx
legacy-frontend/project/src/hooks/: useICRoots.ts
legacy-frontend/project/src/services/: aiService.ts  icpService.ts  loanService.ts  trustService.ts  walletService.ts
src/backend/canisters/collateral/: Cargo.toml  README.md
src/backend/canisters/event_bus/: Cargo.toml  README.md
src/backend/canisters/loans/: Cargo.toml  README.md  dfx.json  loans_backend.did  package.json
src/backend/canisters/loans/src/: lib.rs  types.mo
src/backend/canisters/loans/src/icroots_loans_backend/: Cargo.toml
src/backend/canisters/loans/src/icroots_loans_backend/src/: lib.rs
src/backend/canisters/loans/src/icroots_loans_frontend/: index.html  vite.config.js
src/backend/canisters/loans/src/icroots_loans_frontend/src/: App.js  (+1 more)
src/backend/canisters/repute/: Cargo.toml  README.md
src/backend/canisters/trust_ai/: Cargo.toml  README.md
src/frontend/: package.json
src/icroots_loans_frontend/: package.json
src/icroots_loans_frontend/src/: App.js
