[package]
name        = "collateral_backend"
description = "Collateral service canister"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid        = "0.10"
ic-cdk        = "0.17"
ic-cdk-macros = "0.17"
serde         = { version = "1.0", features = ["derive"] }
